# tui-obj

./: Cargo.toml  README.md  microservice_helper.py
microservice/: converter.py  converter_micro.py
microservice/templates/: index.html
microservice/uploads/: cube.stl
