[package]
name = "tui_obj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.26", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = { version = "0.20.1", default-features = false, features = ['crossterm', 'serde'] }
tobj = "0.0.3"
